PA_Education/TestMenifest/force-app/main/default/objects/CompanyHistory__c/CompanyHistory__c.object-meta.xml
<CustomObject>
    <description>회사 연혁 소개 
홈페이지 노출용 Object</description>
    <label>회사 소개</label>
    <nameField>
        <displayFormat>회사소개-{0000}</displayFormat>
        <label>회사 연혁 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>