PA_Education/TestMenifest/force-app/main/default/objects/CompanyHistory__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>해당하는 날짜(Date__c)의 회사 소개 Description</description>
    <label>내용</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>