PA_Education/TestMenifest/force-app/main/default/objects/CompanyHistory__c/fields/DescriptionEng__c.field-meta.xml
<CustomField>
    <fullName>DescriptionEng__c</fullName>
    <label>내용 (English)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>