PA_Education/TestMenifest/force-app/main/default/objects/CompanyHistory__c/fields/fm_Year__c.field-meta.xml
<CustomField>
    <fullName>fm_Year__c</fullName>
    <formula>TEXT( Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>년도(fm)</label>
    <type>Text</type>
</CustomField>