PA_Education/TestMenifest/force-app/main/default/objects/CompanyHistory__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>회사 소개 월</description>
    <inlineHelpText>ex) 1, 2, 3..</inlineHelpText>
    <label>월</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>