PA_Education/TestMenifest/force-app/main/default/objects/CompanyHistory__c/fields/OrderNum__c.field-meta.xml
<CustomField>
    <fullName>OrderNum__c</fullName>
    <description>회사 소개 Front Output 순서</description>
    <label>OrderNum</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>