PA_Education/TestMenifest/force-app/main/default/objects/CompanyHistory__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>회사 소개 년도</description>
    <inlineHelpText>ex)2013, 2020..</inlineHelpText>
    <label>년도</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>