PA_Education/TestMenifest/force-app/main/default/objects/CompanyHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Description__c</columns>
    <columns>OrderNum__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>